tests/snapshots/formats__squashfs__zstd.sqfs.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ zstd.sqfs — SquashFS 4.0, zstd, 3 inodes, 128.0 KiB blocks, 220 bytes  [0x0+0xdc]
  ▾ Superblock — version 4.0  [0x0+0x60]
      Magic: "hsqs"  [0x0+0x4]
      Inode count: 3  [0x4+0x4]
      Modification time: 2024-01-02 03:04:00 UTC  [0x8+0x4]
      Block size: 131072 — 128.0 KiB  [0xc+0x4]
      Fragment count: 0  [0x10+0x4]
      Compression: zstd (0x6)  [0x14+0x2]
      Block size (log2): 17  [0x16+0x2]
      Flags: 0x210 [NO_FRAGMENTS | NO_XATTRS]  [0x18+0x2]
      ID count: 1  [0x1a+0x2]
      Major version: 4  [0x1c+0x2]
      Minor version: 0  [0x1e+0x2]
      Root inode reference: 0x0 — block 0x0, offset 0x0  [0x20+0x8]
      Bytes used: 220 — 220 bytes  [0x28+0x8]
      ID table: 0xd4  [0x30+0x8]
      Xattr ID table: 0xffffffffffffffff  [0x38+0x8]
      Inode table: 0x7f  [0x40+0x8]
      Directory table: 0xb3  [0x48+0x8]
      Fragment table: 0xffffffffffffffff  [0x50+0x8]
      Export table: 0xffffffffffffffff  [0x58+0x8]
    Data and fragment blocks — 31 bytes, zstd  [0x60+0x1f]
  ▾ Inode table — 52 bytes  [0x7f+0x34]
    ▾ Metadata blocks — zstd
      ▾ Metadata block 0: 0x32 — 50 bytes, zstd  [0x7f+0x34]
        ▾ Data — 0x60 bytes decompressed  [0x81+0x32]
            Data  [#1:0x0+0x60]
    ▾ Inodes — 3 inodes
        ! malformed: inode type 0 [#1:0x24+0x2]
      ▾ Inode 1 — -rw-r--r--, regular file, 80 bytes  [#1:0x0+0x24]
          Type: regular file (0x2)  [#1:0x0+0x2]
          Mode: 0x1a4 — -rw-r--r--  [#1:0x2+0x2]
          Owner (ID index): 0  [#1:0x4+0x2]
          Group (ID index): 0  [#1:0x6+0x2]
          Modified: 2024-01-02 03:04:00 UTC  [#1:0x8+0x4]
          Inode number: 1  [#1:0xc+0x4]
          First block: 0x60  [#1:0x10+0x4]
          Fragment: 4294967295 — none  [#1:0x14+0x4]
          Offset in fragment: 0  [#1:0x18+0x4]
          Size: 80 — 80 bytes  [#1:0x1c+0x4]
        ▾ Block sizes — 1 block  [#1:0x20+0x4]
            Block 0: 0x1a40002 — 10.3 MiB, uncompressed  [#1:0x20+0x4]
  ▾ Directory table — 27 bytes  [0xb3+0x1b]
    ▾ Metadata block 0: 0x8019 — 25 bytes, uncompressed  [0xb3+0x1b]
        Data — stored  [0xb5+0x19]
  ▾ ID table — 1 entries  [0xd4+0x8]
    ▾ Index 0: 0xce — metadata block at 0xce  [0xd4+0x8]
      ▾ Metadata block — 4 bytes  [0xce+0x6]
          Data  [0xd0+0x4]
    ▾ Entries — 1 entries  [0xd0+0x4]
        ID 0: 0  [0xd0+0x4]
  ▾ Root directory
      ! malformed: not a directory
